# llm-agents-from-scratch-inspector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  demo.py  demo_cloud.py  hatch_build.py  mypy.ini  pyproject.toml
.agents/skills/stop-at-one/: SKILL.md
.claude/docs/: prototype.html
.claude/docs/adr/: ADR-001-in-memory-single-process-session-store.md  ADR-002-convention-based-entrypoint-discovery.md
.github/workflows/: e2e.yml  lint.yml  package.yml  release.yml  unit_test.yml
docs/: overview.md
docs/adr/: ADR-002-convention-based-entrypoint-discovery.md  TEMPLATE.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: abort.spec.ts  agent-info.spec.ts  full-loop.spec.ts  helpers.ts  ollama-status-chip.spec.ts  panels.spec.ts  rehydration.spec.ts  reject.spec.ts  skills-config-carryover.spec.ts  task-validation.spec.ts
frontend/e2e/fixtures/: scripted_agent.py
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  queryKeys.ts  types.ts
frontend/src/api/hooks/: index.ts  useAbort.ts  useAgentInfo.ts  useComplete.ts  useCreateSession.ts  useEditResult.ts  useEditStep.ts  useHealth.ts  useNextStep.ts  useOllamaStatus.ts  useReject.ts  useRollout.ts  useRunStep.ts  useSessionState.ts  useTemplates.ts
frontend/src/components/: AppShell.tsx  ConfigRail.tsx  Controls.tsx  DecisionCard.tsx  EditableField.tsx  ErrorBanner.tsx  FinalResultCard.tsx  HighlightedBlock.tsx  ModeToggle.tsx  OllamaStatusChip.tsx  OverseerCard.tsx  PendingOperationCard.tsx  RehydratedSessionView.tsx  RolloutDrawer.tsx  RolloutPanel.tsx  SkillsConfigFields.tsx  StatusPill.tsx  StepActionButtons.tsx  StepResultCard.tsx  TaskForm.tsx  TemplatesDrawer.tsx  TemplatesSection.tsx  Timeline.tsx  WorkerCard.tsx  useSkillsConfig.ts
frontend/src/components/ui/: alert-dialog.tsx  card.tsx  collapsible.tsx  dialog.tsx  select.tsx  sheet.tsx
frontend/src/lib/: highlight.ts
frontend/src/session/: reducer.ts  types.ts  useSession.ts
scripts/: find_one_wheel.sh  smoke_test_install.sh  verify_wheel_contents.sh
src/agent_inspector/: __init__.py  __main__.py  cli.py  deps.py  discovery.py  errors.py  routes.py  schemas.py  server.py  services.py
src/agent_inspector/errors/: __init__.py  discovery.py  session.py
src/agent_inspector/routes/: __init__.py  error_handlers.py  health.py  ollama.py  session.py
src/agent_inspector/services/: __init__.py  health.py  ollama.py  session.py  session_store.py
tests/: test_abort_route.py  test_agent_info.py  test_cli_launch.py  test_complete_route.py  test_create_session.py  test_discovery.py  test_edit_result_route.py  test_edit_step_route.py  test_integration_loop.py  test_next_step_route.py  test_ollama_route.py  test_ollama_service.py  test_reject_route.py  test_rollout_route.py  test_routes.py  test_run_step_route.py  test_server.py  test_services.py  test_session_eviction.py  test_session_service.py  test_session_state_route.py  test_session_store.py  test_templates_route.py
